--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
-<!DOCTYPE html>
 <html>
-<title >Pacific Ocean</title>
-<headc >Pacific ocean</head>
-<div class="navbar">
-<nav>
-	<a href="index.html" >Home</a>
-	<a href="typeofAnimals.html" >Type of Animals</a>
-	<a href="aboutPacificOcean.html" > About The Pacific ocean</a>
-	<a href="contact.html">Contact</a>
+<title class="title1">Pacific Ocean</title>
+<script>
+	alert("Welcome to my website!");
+
+</script>
+<head class="head1">Pacific Ocean</head>
+<div id="nav">
+<nav id="nav">
+	<a href="index.html">Home</a>
+	<a href="typeofAnimals.html">Type of Animals</a>
+	<a href="aboutPacificOcean.html">About The Pacific ocean</a>
+	<a href="Contact.html">Contact</a>
+</nav>
+</div>
+
+
 <body>
-	<button  id="button">Click here</button>
-<div id="greywhalepic"> <img src="http://3.bp.blogspot.com/-LxdhFExoVUw/Ta94AsdXGuI/AAAAAAAAAAs/ZLY1qPE3pMA/s1600/gray+whale.jpg">
+	<button id="button">Clich here</button>
+<div id="greyWhalePic"> <img src="http://3.bp.blogspot.com/-LxdhFExoVUw/Ta94AsdXGuI/AAAAAAAAAAs/ZLY1qPE3pMA/s1600/gray+whale.jpg">
 
 A grey whale found in the Pacific Ocean
 
-<footer>
+</div>
 
+</body>
+<footer>
+		<Copyright> Nate Powers 2024</Copyright>
+</footer>
 	<link type="text/css" rel="stylesheet" href="mainCSs.css">
 	<script type="text/js" rel="stylesheet" href="main.js">
+	</script>
+	</html>
