--- a/typeOfAnimals.html
+++ b/typeOfAnimals.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <title>Type of Animals</title>
-<head>Type of Animals
-<div class="navbar">
+<head id="head1">Type of Animals</head>
+<div class="nav">
+	<nav id="nav">
 	<a href="index.html">Home</a>
 	<a href="typeofAnimals.html">Type of Animals</a>
-	<a href="aboutThePacificOcean.html"> About The Pacific ocean
-	<a href="Contact.html">Contact</a>
-<table>
+	<a href="aboutThePacificOcean.html">About The Pacific ocean</a>
+	<a href="Contact.html">Contact</a></nav>
+<table id="table1">
 	<th>Pacific ocean Animals</th>
 	<td>
-Pacific ocean animals
 Penguins
 Dugong
 Killer Whale
@@ -26,5 +26,17 @@ Giant Squid
 Pacific White Sided Dolphin
 Stellar Sea Lion
 Hammerhead Shark
+</td>
+</table>
+<div class="hammerhead">
+<img src="https://tse4.mm.bing.net/th?id=OIP.S9YiNKd7gRcNwJoeC6l-7gHaE8&pid=Api&P=0&h=220">
+</div>
 <footer>
+	<Copyright> Nate Powers 2024</Copyright>
+</footer>
+	
 	<link type="text/css" rel="stylesheet" href="mainCSs.css">
+	<linnk type="text/js" rel="styesheet" href="main.js">
+	</linnk>
+</div>
+</html>
