--- a/typeOfAnimals.html
+++ b/typeOfAnimals.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <title>Type of Animals</title>
+	<script>
+	function Date(MM-DD-YYYY) {
+   document.getElementById("#date").OnMouseDown();
+      alert(Date())
+   }
+   var date = d.getDate();
+		</script>
 <head id="head1">Type of Animals</head>
 <div class="nav">
 	<nav id="nav">
@@ -36,7 +43,7 @@ Hammerhead Shark
 </footer>
 	
 	<link type="text/css" rel="stylesheet" href="mainCSs.css">
-	<linnk type="text/js" rel="styesheet" href="main.js">
+	<link type="text/js" rel="styesheet" href="main.js">
 	</linnk>
 </div>
 </html>
