--- a/typeOfAnimals.html
+++ b/typeOfAnimals.html
@@ -44,6 +44,6 @@ Hammerhead Shark
 	
 	<link type="text/css" rel="stylesheet" href="mainCSs.css">
 	<link type="text/js" rel="styesheet" href="main.js">
-	</linnk>
+	</link>
 </div>
 </html>
